# cryo

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  architecture.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  eval.md  plan.md  production_plan.md  pyproject.toml  resources.md
.github/workflows/: deploy.yml
backend/: config.py  db.py  logging_config.py  main.py  models.py  search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  AutocompleteInput.jsx  ErrorBoundary.jsx  FilterSidebar.jsx  ResultCard.jsx  Search.jsx  index.css
nginx/: nginx.conf
pipeline/: download.py  index.py  ingest_commoncrawl.py  ingest_gutenberg.py  ingest_hn.py  ingest_stackexchange.py  ingest_utils.py  ingest_wayback.py  ingest_wikipedia.py  ingest_wikipedia_dump.py  seed_dev.py  validate.py
tests/integration/: conftest.py  test_search_api.py
tests/unit/: test_models.py
